# synesis-coder

./: .env.example  .gitignore  CHANGELOG.md  README.md  abstract_processor10.py  config.toml  interview_processor.py  pyproject.toml  semantic_memory_builder.py  synesis-coder-implementation-plan.md  topic_processor.py
synesis_coder/: __init__.py  __main__.py  cli.py  llm_client.py  project_loader.py  prompt_builder.py  validator.py
synesis_coder/modes/: __init__.py  item_mode.py
tests/: test_item_mode.py
